RESOLVED FIXED145273
AX: Figure out why list-detection2.html test fails on GTK
https://bugs.webkit.org/show_bug.cgi?id=145273
Summary AX: Figure out why list-detection2.html test fails on GTK
chris fleizach
Reported 2015-05-21 10:42:30 PDT
It looks like list-detection2.html fails on GTK I'm adding a failure entry to TestExpectations, but someone should check this out and figure out what we need here to make it work
Attachments
Patch (3.49 KB, patch)
2015-05-22 00:01 PDT, Joanmarie Diggs
no flags
Patch (1.92 KB, patch)
2015-05-22 15:40 PDT, Joanmarie Diggs
no flags
Radar WebKit Bug Importer
Comment 1 2015-05-21 10:42:54 PDT
Joanmarie Diggs
Comment 2 2015-05-21 11:10:15 PDT
Probably due to AccessibilityUIElement::computedRoleString() not being implemented in ATK. I'll do that this evening or tomorrow.
Joanmarie Diggs
Comment 3 2015-05-21 19:05:40 PDT
*** Bug 145255 has been marked as a duplicate of this bug. ***
Joanmarie Diggs
Comment 4 2015-05-21 19:24:46 PDT
In addition to implementing computedRoleString() it looks like there's an issue with some pseudo elements: FAIL: ul w/ bullet content on ::before -> group. Expected: list. FAIL: ul w/ bullet content on inline ::before -> group. Expected: list. FAIL: ol w/ counter content on ::before -> group. Expected: list. FAIL: ol w/ counter content on inline ::before -> group. Expected: list.
Joanmarie Diggs
Comment 5 2015-05-21 19:52:20 PDT
Ugh, there's additional problems with the heuristics. In the non-list cases, the list gets mapped to a more generic (but incorrect for my platform) role. They should be ATK_ROLE_SECTION; not ATK_ROLE_PANEL. But even worse, the list items still have role list item.
Joanmarie Diggs
Comment 6 2015-05-22 00:01:53 PDT
Joanmarie Diggs
Comment 7 2015-05-22 00:26:20 PDT
(In reply to comment #5) > Ugh, there's additional problems with the heuristics. In the non-list cases, > the list gets mapped to a more generic (but incorrect for my platform) role. > They should be ATK_ROLE_SECTION; not ATK_ROLE_PANEL. But even worse, the > list items still have role list item. Opened bug 145300 for the above.
WebKit Commit Bot
Comment 8 2015-05-22 01:03:45 PDT
Comment on attachment 253581 [details] Patch Clearing flags on attachment: 253581 Committed r184765: <http://trac.webkit.org/changeset/184765>
WebKit Commit Bot
Comment 9 2015-05-22 01:03:52 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 10 2015-05-22 14:53:17 PDT
This change made accessibility/list-detection2.html crash on Windows.
Joanmarie Diggs
Comment 11 2015-05-22 15:15:49 PDT
(In reply to comment #10) > This change made accessibility/list-detection2.html crash on Windows. You have a backtrace? When I look at https://build.webkit.org/results/Apple%20Win%207%20Debug%20(Tests)/r184783%20(66325)/accessibility/list-detection2-crash-log.txt I see No crash log found for DumpRenderTree:3340.
Joanmarie Diggs
Comment 12 2015-05-22 15:35:30 PDT
Reopening to deal with the crash on Win.
Joanmarie Diggs
Comment 13 2015-05-22 15:40:39 PDT
Joanmarie Diggs
Comment 14 2015-05-22 15:42:59 PDT
Comment on attachment 253612 [details] Patch Chris: Since your platform didn't need this check and since it crashes on Windows, I've added platform checks so I can fix the crash now. (It's Friday, holiday weekend, etc. ;)) Alexey: If you can get me a backtrace and open a new bug, I'll add it to my list of things to look into.
WebKit Commit Bot
Comment 15 2015-05-22 16:44:30 PDT
Comment on attachment 253612 [details] Patch Clearing flags on attachment: 253612 Committed r184801: <http://trac.webkit.org/changeset/184801>
WebKit Commit Bot
Comment 16 2015-05-22 16:44:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.