AX: Figure out why list-detection2.html test fails on GTK https://bugs.webkit.org/show_bug.cgi?id=145273

Reviewed by Chris Fleizach.

Source/WebCore:

Platforms which expose rendered text content through the parent element "ignore" the
child renderers. This was causing AccessibilityList::childHasPseudoVisibleListItemMarker
to fail, which in turn caused the list detection heuristic to fail. Therefore add one
final check to this method to look for non-empty, non-whitespace text under the ::before
pseudo element.

No new tests; list-detection2.html now passes on GTK.

* accessibility/AccessibilityList.cpp:
(WebCore::AccessibilityList::childHasPseudoVisibleListItemMarkers):

LayoutTests:

* platform/gtk/TestExpectations: Removed list-detection2.html from the list of expected failures.


Canonical link: https://commits.webkit.org/163304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184765 268f45cc-cd09-0410-ab3c-d52691b4dbfc